// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList should not render show more button 1`] = `null`;

exports[`ItemList should render items 1`] = `
@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

<div>
  test1
</div>
`;

exports[`ItemList should render items 2`] = `
@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

<div>
  test2
</div>
`;

exports[`ItemList should render search input 1`] = `
@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

<input
  aria-invalid="false"
  class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
  id="mantine-r2"
  placeholder="placeholder-test"
  spellcheck="false"
  type="text"
  value="test1"
/>
`;

exports[`ItemList should render show more button 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'PT Mono',monospace !important;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 0.75rem;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0.125rem;
  -moz-letter-spacing: 0.125rem;
  -ms-letter-spacing: 0.125rem;
  letter-spacing: 0.125rem;
  -webkit-transition: 150ms background ease,150ms color ease,150ms border ease;
  transition: 150ms background ease,150ms color ease,150ms border ease;
  border-radius: 0.375rem;
  padding: 0.5rem 0.875rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  border: 0.125rem solid #838495;
  color: white;
  background-color: transparent;
  padding: 0.375rem 0.75rem;
}

.c0:hover:not(:disabled) {
  border-color: #5596F6;
  color: #5596F6;
}

.c0:active:not(:disabled) {
  border-color: #1761CF;
  color: #1761CF;
}

.c0:disabled {
  background-color: transparent;
  border-color: #838495;
}

.c0:disabled .mantine-Button-label {
  color: #838495;
}

.c0.mantine-Button-loading:before {
  top: -0.125rem;
  left: -0.125rem;
  right: -0.125rem;
  bottom: -0.125rem;
}

.c0.mantine-Button-loading .mantine-Button-label {
  color: white;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (max-width:56.25rem) {

}

@media (max-width:600px) {

}

<button
  class="mantine-UnstyledButton-root mantine-Button-root c0 c1 mantine-bbacc7"
  data-button="true"
  type="button"
>
  <div
    class="mantine-3xbgk5 mantine-Button-inner"
  >
    <span
      class="mantine-Button-icon mantine-Button-leftIcon mantine-1g4orza"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </span>
    <span
      class="mantine-qo1k2 mantine-Button-label"
    >
      Show more
    </span>
  </div>
</button>
`;

exports[`ItemList should render title 1`] = `
.c0 {
  font-family: VT323;
  font-style: normal;
  font-weight: normal;
  font-size: 3rem;
  line-height: 3rem;
  color: #E2E2EE;
}

.c1 {
  font-size: 1.875rem;
  line-height: 2.625rem;
}

@media (max-width:56.25rem) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.625rem;
    line-height: 2rem;
  }
}

<span
  class="c0 c1"
>
  colors
</span>
`;
